--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,4 +1,6 @@
-  <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-1">
+<div class="container-fluid">
+  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+ <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-1">
     Educacion  <!-- la palabra educacion fuera de la tarjeta? -->
     <span *ngIf="botonEditEducacion == true; else mostrar4"></span>
     <ng-template #mostrar4 class="hover__boton">
@@ -20,9 +22,9 @@
   <div *ngFor="let miPortfolio of listas">
 
 
-<div class="container-fluid">
+<!-- <div class="container-fluid"> -->
   <input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br> 
-  <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+  <!-- <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
     <h4 class="h3-acercaDe text-center mt-3">
     
       {{ miPortfolio.nivelEducativo }}
@@ -57,9 +59,13 @@
           </div>
         </ng-template>
      
-      </article>
-    </div>
-  
+     <!--  </article>
+    </div> -->
+
+  </div>
+ </div>
+  <!-- fin de educacion  -->
+
     <div
     class="modal fade"
     id="EducacionModal"
@@ -71,7 +77,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">
-            Editar Datos Personales
+            Editar Educacion
           </h5>
           <button
           type="button"
@@ -133,7 +139,7 @@ aria-hidden="true"
   <div class="modal-content">
     <div class="modal-header">
       <h5 class="modal-title" id="exampleModalLabel">
-        Editar Datos Personales
+        Agregar Estudios
       </h5>
       <button
       type="button"
