--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,8 +1,10 @@
 <!--========Inicio Hard Skills====== -->
+<!-- <div class="container-fluid"> -->
+  <div class="container-fluid">
+  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark pb-3">
 <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mt-1 mb-2">Hard Skills</h3>
-<div class="container-fluid">
   <input [(ngModel)]="valorCirculo.id" #identificador style="display: none;"><br>
-  <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+ <!--  <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
     <div class="skills">
       <div class="container d-flex  justify-content-around">
         <i class="ico-html h1 fa-brands fa-html5"></i>
@@ -46,8 +48,10 @@
               ></a>
             </div>
           </ng-template>
-        </article>
-      </div>
+       <!--  </article>
+      </div> -->
+  </div>
+</div>
           <div  class="modal fade" id="SkillsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
