--- a/src/app/components/soft/soft.component.html
+++ b/src/app/components/soft/soft.component.html
@@ -1,3 +1,5 @@
+<div class="container-fluid">
+  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
 <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-1">
     Soft Skills  
     <span *ngIf="botonEditHardSoft == true; else mostrar4"></span>
@@ -14,9 +16,9 @@ data-bs-toggle="modal"
 
 <div *ngFor="let listas of miPortfolios">
 <div *ngFor="let miPortfolios of listas">
-  <div class="container-fluid">
+<!--   <div class="container-fluid"> -->
     <input [(ngModel)]="miPortfolios.id" #identificadors style="display: none;"><br> 
-    <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+ <!--    <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
       <h4 class="h3-acercaDe text-center mt-3">
         {{ miPortfolios.softTitulo}}
       </h4>
@@ -47,11 +49,15 @@ data-bs-toggle="modal"
 
 </div>
 </ng-template>
-</article>
+<!-- </article>
 
 
+
+</div> -->
 
 </div>
+</div>
+<!-- fin de SOFT Skills -->
 <div
 class="modal fade"
 id="SoftModal"
