--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -43,7 +43,10 @@
   <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
         <h3 class="h3-titulos pt-4 ps-4 display-6 text-left">Acerca de mi</h3>
         <div class="container d-flex flex-column">
-        <p class="row-2 text-white text-parrafos">{{miPortfolio.sobremi}}</p>
+        <p class="row-2 text-white text-parrafos">{{miPortfolio.sobremi}}
+        </p>
+        <p class="row-2 text-white text-parrafos">{{miPortfolio.fechaNacimiento}}
+        </p>
         </div>
 
        <!-- Inicio boton editar acerca--> 
