--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-
     <app-header></app-header>
-    <app-acerca-de></app-acerca-de>
-    <app-skills></app-skills>
-    <app-soft></app-soft>
-    <app-experiencia></app-experiencia>
-    <app-educacion></app-educacion>
-    <app-proyectos></app-proyectos>
+    <app-navegacion></app-navegacion>
+    
     <app-footer></app-footer> 
