--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -16,18 +16,15 @@
       }
       }
       .hover__boton{
-        margin-top:40px;
-        margin-left:-20px;  
+        margin-left:1%;  
         height: 40px;
         width: 40px;
+        color: black;
         background-color:rgb(2, 247, 137);
       }
        .hover__boton:hover{
         background-color:#005afc;
         font-size: 20px;
-        height: 45px;
-        width: 45px;
         color: white;
-     
      }
  
