--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,36 +1,43 @@
-<div class="container-fluid">
-  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
- <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-1">
+<div class="container-fluid" >
+  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark" >
+ <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-2 mt-1">
     Educacion  <!-- la palabra educacion fuera de la tarjeta? -->
-    <span *ngIf="botonEditEducacion == true; else mostrar4"></span>
-    <ng-template #mostrar4 class="hover__boton">
+
       <a
-      class="btn btn-outline-light hover__boton mb-5"
+       *ngIf="SGguard.canActivate()"
+      class="btn btn-outline-light agregar__boton mb-3"
       role="button" title="Agregar Información"
       data-bs-target="#EducacionModalNuevo"
       data-bs-toggle="modal"
       ><i class="fa-solid fa-square-plus"></i
     ></a>
-  </ng-template>
+
 </h3>
 
 <!--======= Inicio de Educacion ======= -->
 
-
-
  <div *ngFor="let listas of miPortfolio">
   <div *ngFor="let miPortfolio of listas">
-
-
-<!-- <div class="container-fluid"> -->
-  <input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br> 
-  <!-- <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
-    <h4 class="h3-acercaDe text-center mt-3">
     
-      {{ miPortfolio.nivelEducativo }}
-    </h4>
-    <div class="container d-flex flex-column">
-      
+    
+    <!-- <div class="container-fluid"> -->
+      <input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br> 
+      <!-- <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
+        <h4 class="h3-acercaDe text-center mt-3">
+          {{ miPortfolio.nivelEducativo }}
+       
+          <a
+          class="btn btn-outline-light hover__boton"
+          role="button"
+          data-bs-target="#EducacionModal"
+          data-bs-toggle="modal"
+          *ngIf="SGguard.canActivate()"
+          (click)="editar(identificador.value, miPortfolio.titulo,miPortfolio.nivelEducativo,miPortfolio.institucion)" title="Editar Tarjeta"><i class="fa-solid fa-pencil"></i
+            ></a>
+
+
+        </h4>
+        <div class="container d-flex flex-column">
       <p class="row-2 text-white text-parrafos">
       
         {{ miPortfolio.titulo }}
@@ -43,21 +50,11 @@
       </p>
     </div>
     
-   
-    <span *ngIf="botonEditEducacion == true; else mostrar4"></span>
-    <ng-template #mostrar4 class="hover__boton">
-      <div class="text-center">
-        <a
-        class="btn btn-outline-light hover__boton mb-3"
-        role="button"
-        data-bs-target="#EducacionModal"
-        data-bs-toggle="modal"
-        (click)="editar(identificador.value, miPortfolio.titulo,miPortfolio.nivelEducativo,miPortfolio.institucion)" title="Editar Tarjeta"
-        ><i class="fa-solid fa-pencil"></i
-          ></a>
+   <!--boton editar edu -->
+  
+  
 
-          </div>
-        </ng-template>
+    
      
      <!--  </article>
     </div> -->
@@ -169,8 +166,7 @@ aria-hidden="true"
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-success fa-solid fa-floppy-disk" title="Guardar"(click)="agregarEd()">
-
+    <button type="button" class="btn btn-success fa-solid fa-floppy-disk" title="Guardar"(click)="agregarEd()" >
     </button>
     
   
