--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -2,18 +2,16 @@
 <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
 
   <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-2 mt-1">Experiencia
-    <span *ngIf="botonEditExperiencia==true else mostrar4"></span>
-    <ng-template #mostrar4 class="hover__boton">
-      
       <a
-      class="btn btn-outline-light hover__boton mb-5 ms-3"
-      role="button" title="Agregar Información"
+      class="btn btn-outline-light agregar__boton mb-3"
+      role="button"
+       title="Agregar Información"
       data-bs-target="#ExperienciaModalNuevo"
       data-bs-toggle="modal"
+      *ngIf="SGguard.canActivate()"
       ><i class="fa-solid fa-square-plus"></i
         ></a>
-      </ng-template>
-    </h3>
+  </h3>
     
     <!--==== Inicio de Experiencia ..==== -->
     
@@ -25,7 +23,14 @@
 
           <input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br> <!-- esta linea es para extraer el valor de x.id -->
  
-            <h4 class="h3-acercaDe text-center mt-3">{{miPortfolio.empleo}}</h4>
+            <h4 class="h3-acercaDe text-center mt-3">{{miPortfolio.empleo}}
+
+            
+                <a class=" btn btn-outline-light hover__boton"  role="button" data-bs-target="#ExperienciaModal" data-bs-toggle="modal" *ngIf="SGguard.canActivate()" (click)="editar(identificador.value,miPortfolio.empleo,miPortfolio.descripcionEmpleo)" title="Editar Tarjeta"><i class="fa-solid fa-pencil" ></i></a>
+           
+
+
+            </h4>
             <div class="container d-flex flex-column">
               
               <p class="row-2 text-white text-parrafos">
@@ -35,12 +40,8 @@
             </div>
             
             <!-- Inicio boton editar Experiencia--> 
-            <span *ngIf="botonEditExperiencia==true else mostrar4"></span>
-            <ng-template #mostrar4 class="hover__boton">
-              <div class="text-center"> 
-                <a class=" btn btn-outline-light  hover__boton mb-3"  role="button" data-bs-target="#ExperienciaModal" data-bs-toggle="modal"  (click)="editar(identificador.value,miPortfolio.empleo,miPortfolio.descripcionEmpleo)" title="Editar Tarjeta"><i class="fa-solid fa-pencil" ></i></a>
-              </div>
-            </ng-template>
+           
+       
             <!-- final boton editar experiencia-->
             
 
