--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,78 +1,81 @@
 .izquierda{
   width: 100%;
 }
-.img-Arg {
-  position: absolute;
-  top: 0px;
-  width: 170px;
-  min-width: 80px;
-} 
-.main-menu{
-  list-style: none;
-  margin-top: 0;
-  margin-bottom: 0px;
-  padding-left: 0;
-  width: 100%;
-  display:inline-flex;
-  flex-direction:row;
-  align-items:flex-end;
-  /* color a modificar */
-  /* background-color: #a6e3e9; */
+
+.ul__Icons{
+  justify-content: end;
+  margin-right: 5%;
 }
-@media screen and (min-width:768px){
-  .main-menu{
-      justify-content: end;
-      flex-direction: row;
-      transform: translateY(0);      
-  }
-}
-.main-menu__item{
-  padding: 1em;
-}
-.main-menu__link{
-  /* color a modificar */
+
+.main-menu__link{ 
+  margin-top: 60%;
   color:#ffffff ;
   font-size: 30px;
-  margin-top: 100px;
-  padding: 10px;
+  padding:10px;
   text-decoration: none;
 }
-/* color a modificar */
+
 .main-menu__link:hover{ 
   color: rgb(2, 247, 137);
 }
-@media screen and (min-width:768px){
-  .main-menu__link{     
-      margin-top: 10px; 
-      font-size: 30px;   
-  }
-}
-@media screen and (max-width:450px){
-  .main-menu__link{     
-      padding: 0px;
-     font-size:25px ;     
-  }
-} 
+
 .formularioOculto{
   display: none;
 }
 .dblock{
   display: block;
 }
+
+
+
+
 /* LOGO ARGENTINA PROGRAMA Y SUS HOVER CON FILTROS PARA EL CAMBIO DE COLOR*/
+
 .img-Arg {
-    display: block ;
-    float:left ;
-    margin-left: 2%;
-    height:auto;
-    width: 174px;
-    min-width: 80px ;
+  position: absolute;
+  width: 174px;
+}
+.img-Arg:hover {
+  -webkit-filter: invert(60%) sepia(20%) saturate(5000%) hue-rotate(1200deg) brightness(200%) contrast(100%);
+  filter: invert(60%) sepia(20%) saturate(5000%) hue-rotate(1200deg) brightness(200%) contrast(100%); 
+  /*cambiar color con hue-rotate*/
+}
+.img1 {
+ /* background: url('/assets/img/img-represent.jpg'); */
+ /* background-image:(var(--img-represent)); */
+ width: auto;
+ height:350px;
+ background-size: cover;
+ background-attachment: fixed;
+  /* ACA LE PUEDO DAR CON !IMPORTANT */
+}
+
+
+
+
+
+@media screen and (max-width:474px){
+  .img-Arg{
+    position: relative;
+    display: block;
+    margin: 0 auto;
   }
-    .img-Arg:hover {
-    -webkit-filter: invert(60%) sepia(20%) saturate(5000%) hue-rotate(1200deg) brightness(200%) contrast(100%);
-            filter: invert(60%) sepia(20%) saturate(5000%) hue-rotate(1200deg) brightness(200%) contrast(100%); 
-            /*cambiar color con hue-rotate*/
+  .ul__Icons{
+    justify-content: center;
+    margin-right: 0%;
   }
+  .main-menu__link{
+    margin-top: 0%;
+  }
+  .titulo{
+    font-size: 200%;
+  }
+}
+
+
+
+
+
   /* COLORES DE : ICONOS,SUS HOVER, BARRAS DE NAVEGACION, BODY  */
       card {
         background-color: transparent;
@@ -85,31 +88,21 @@
           width: 10%;
         } 
       }
-  .img-Div .img1 {
-    background: url("/assets/img/img-represent.jpg");
-    width: auto;
-    height:350px;
-    background-size: cover;
-    background-attachment: fixed;
-}
-@media screen and (max-width:1100px) {
-    .img-Div .img1{ height:200px;}
- }
- @media screen and (max-width:406px) {
-    .img-Div .img1{
-      height: 150px;
-    } 
-      }
+
+
   .pequecontenedor{
     position: absolute;
     top: 23%;
     right: 2%;
-    height: 200px;
+    height: auto;
+    padding: 10px;
     width: 190px;
     background-color: rgb(53, 53, 53);
     text-align: center;
     border-radius: 3%;
   }
+
+
   @media screen and (max-width: 770px){
     .pequecontenedor{
       top:25%;
@@ -175,4 +168,31 @@
     border-color: rgb(2, 247, 137);
     -webkit-box-shadow: none;
     box-shadow: none;
+}
+
+
+.img-Perfil {
+  max-height:180px;         
+  background-color: rgb(2, 247, 137);
+  padding: 2px;
+  border-radius: 50%;
+}
+
+.hover__boton{
+
+  color: black;
+  height: 40px;
+  width: 40px;
+  background-color:rgb(2, 247, 137);
+}
+.botonEdit__represent{
+  background-color:rgb(2, 247, 137);
+  color: black;
+  height: 40px;
+  width: 40px;
+}
+.botonEdit__represent:hover,.hover__boton:hover{
+  background-color:#005afc;
+    font-size: 20px;
+    color: white;
 }
