--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -39,17 +39,15 @@
 }
 
 .hover__boton{
-    margin-top:40px;
-    margin-left:-20px;  
+    margin-left:1%;  
     height: 40px;
     width: 40px;
+    color: black;
     background-color:rgb(2, 247, 137);
   }
    .hover__boton:hover{
     background-color:#005afc;
-    font-size: 20px;
-    height: 45px;
-    width: 45px;
-    color: white;
- 
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+  
  }
