--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,5 +1,5 @@
 /* SKILLS Y SUS ICONOS */
-.circulo-one,.circulo-two,.circulo-three,.circulo-four{
+.circulo-one,.circulo-two,.circulo-three,.circulo-four,.circulo-five,.circulo-six{
     position: relative;
     height: 170px;
     width: 170px;
@@ -10,19 +10,19 @@
   }
 
   @media screen and (max-width: 1100px) {
-    .circulo-one,.circulo-two,.circulo-three,.circulo-four {
+    .circulo-one,.circulo-two,.circulo-three,.circulo-four,.circulo-five,.circulo-six {
       height:150px ;
       width:150px ;
     }
   }
   @media screen and (max-width: 610px) {
-    .circulo-one,.circulo-two,.circulo-three,.circulo-four {
+    .circulo-one,.circulo-two,.circulo-three,.circulo-four,.circulo-five,.circulo-six {
       height:100px ;
       width:100px ;
     }
   }
   @media screen and (max-width: 360px) {
-    .circulo-one,.circulo-two,.circulo-three,.circulo-four {
+    .circulo-one,.circulo-two,.circulo-three,.circulo-four,.circulo-five,.circulo-six {
       height: 80px;
       width:80px ;
     }
@@ -30,7 +30,7 @@
 
   
   
-  .circulo-one:before,.circulo-two:before,.circulo-three:before,.circulo-four:before {
+  .circulo-one:before,.circulo-two:before,.circulo-three:before,.circulo-four:before,.circulo-five:before,.circulo-six:before {
     content: "";
     position: absolute;
     height: 88%;
@@ -38,7 +38,7 @@
     background-color: #343A40;
     border-radius: 50%;
   }
-  .valor-one,.valor-two,.valor-three,.valor-four{
+  .valor-one,.valor-two,.valor-three,.valor-four,.valor-five,.valor-six{
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size:50px;
@@ -46,13 +46,11 @@
     color: #ffffff;
   }
   @media screen and (max-width: 1100px) {
-    .valor-one,.valor-two,.valor-three,.valor-four {
+    .valor-one,.valor-two,.valor-three,.valor-four,.valor-five,.valor-six {
       font-size: 30px;
     }
   }
 
-
-  
     .container .ico-html{
       font-size: 115px;
       color:#ff7300;
@@ -71,29 +69,15 @@
    font-size: 115px;
     color:#b30404;
     }
-
-    .container .ico-hands{
-        font-size: 115px;
-        text-align: center;        
-        color: #0058ff;
-      }
-
-      .container .ico-idea{
-        font-size: 115px;
-        text-align: center;
-        color: #0058ff;
-      }
-      .container .ico-comunicacion{
+    .container .ico-sass{
       font-size: 115px;
-      text-align: center;
-      color: #0058ff;
-      }
-      .container .ico-estudio{
-      font-size: 115px;
-      text-align: center;
-      color: #0058ff;
-      }
-
+       color:#C76494;
+       }
+       .container .ico-boostrap{
+        font-size: 115px;
+         color:#8411F6;
+         }
+  
   
     @media screen and (min-width:200px) {
       .container .ico-css3{
@@ -101,25 +85,22 @@
       }
     }
     @media screen and (max-width: 610px) {
-      .container .ico-html,.container .ico-css3,.container .ico-js,.container .ico-ang,.container .ico-comunicacion,.container .ico-hands,.container .ico-idea,.container .ico-estudio {
+      .container .ico-html,.container .ico-css3,.container .ico-js,.container .ico-ang,.container .ico-comunicacion,.container .ico-hands,.container .ico-idea,.container .ico-estudio,.container .ico-sass,.container .ico-boostrap  {
         font-size: 50px;
 
       }
     }
     .hover__boton{
-      margin-top:40px;
-      margin-left:-20px;  
+      line-height: 155%;
       height: 40px;
       width: 40px;
+      color: black;
       background-color:rgb(2, 247, 137);
     }
      .hover__boton:hover{
       background-color:#005afc;
       font-size: 20px;
-      height: 45px;
-      width: 45px;
-      color: white;
-   
+      color: white; 
    }
-    
+ 
   /* FIN SKILLS E ICONOS */
