--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,11 +1,24 @@
 <!--========Inicio Hard Skills====== -->
 <!-- <div class="container-fluid"> -->
-  <div class="container-fluid">
-  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark pb-3">
-<h3 class="h3-titulos pt-4 ps-4 display-6 text-left mt-1 mb-2">Hard Skills</h3>
-  <input [(ngModel)]="valorCirculo.id" #identificador style="display: none;"><br>
- <!--  <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
-    <div class="skills">
+  <div class="container-fluid"  > 
+    <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark pb-3"  >
+      <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mt-1 mb-2">Hard Skills
+      
+        <a
+        class="btn btn-outline-light hover__boton mb-3"
+        role="button"
+        data-bs-target="#SkillsModal"
+        data-bs-toggle="modal"
+        *ngIf="SGguard.canActivate()"
+        (click)="editarHards(identificador.value, valorCirculo.primercirculo, valorCirculo.segundocirculo, valorCirculo.tercercirculo,valorCirculo.cuartocirculo, valorCirculo.quintocirculo, valorCirculo.sextocirculo)" title="Editar Tarjeta"
+        ><i class="fa-solid fa-pencil"></i
+          ></a>
+
+        </h3>
+        <input [(ngModel)]="valorCirculo.id" #identificador style="display: none;"><br>
+        <!--  <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
+    <div class="skills" >
+    
       <div class="container d-flex  justify-content-around">
         <i class="ico-html h1 fa-brands fa-html5"></i>
         <i class="ico-css3 h1 fa-brands fa-css3-alt "></i>
@@ -20,11 +33,11 @@
           <div id="valor-two" class="valor-two">0%</div>
         </div>
       </div>
-      <!--  circulo 3 -->
       <div class="container d-flex justify-content-around">
         <i class="ico-js h1 fa-brands fa-js"></i>
         <i class="ico-ang h1 fa-brands fa-angular"></i>
       </div>
+      <!--  circulo 3 -->
       <div class="container d-flex justify-content-around">
         <div class="circulo-three ">
           <div id="valor-three" class="valor-three">0%</div>
@@ -34,22 +47,30 @@
           <div id="valor-four" class="valor-four">0%</div>
             </div>
           </div>
-        </div>
-        <span *ngIf="botonEditHardSoft == true; else mostrar4"></span>
-        <ng-template #mostrar4 class="hover__boton">
-          <div class="text-center">
-            <a
-            class="btn btn-outline-light hover__boton mb-3"
-            role="button"
-            data-bs-target="#SkillsModal"
-            data-bs-toggle="modal"
-            (click)="editarHards(identificador.value, valorCirculo.primercirculo, valorCirculo.segundocirculo, valorCirculo.tercercirculo,valorCirculo.cuartocirculo)" title="Editar Tarjeta"
-            ><i class="fa-solid fa-pencil"></i
-              ></a>
+
+<!-- nuevos -->
+          <div class="container d-flex  justify-content-around">
+            <i class="ico-boostrap h1 fa-brands fa-bootstrap"></i>
+            <i class="ico-sass h1 fa-brands fa-sass"></i>
+          </div>
+          <div class="container d-flex justify-content-around ">
+            <!-- circulo 5 -->
+            <div class="circulo-five ">
+              <div id="valor-five" class="valor-five">0%</div>
             </div>
-          </ng-template>
-       <!--  </article>
-      </div> -->
+            <!-- circulo 6-->
+            <div class="circulo-six ">
+              <div id="valor-six" class="valor-six">0%</div>
+            </div>
+          </div>
+
+
+        </div>
+       
+
+    
+    
+      
   </div>
 </div>
           <div  class="modal fade" id="SkillsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -60,13 +81,14 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <div class="container-fluid d-flex">
-                    <p  class="col-2 row-1 text-center">MySQl<input  class="form-control" type="text" [(ngModel)]=" editarHard.sextocirculo" ></p> 
-                    <p  class="col-2 row-1 text-center">Angular<input class="form-control" type="text" [(ngModel)]=" editarHard.segundocirculo" ></p> 
-                    <p class="col-2 row-1  text-center">Html<input  class="form-control" type="text" [(ngModel)]=" editarHard.tercercirculo" ></p> 
-                    <p  class="col-2 row-1  text-center">Css  <input  class="form-control" type="text" [(ngModel)]=" editarHard.cuartocirculo" ></p> 
-                    <p class="col-2 row-1  text-center" >Sass  <input  class="form-control" type="text" [(ngModel)]=" editarHard.quintocirculo" ></p> 
-                    <p  class="col-2 row-1  text-center">JavaScript  <input class="form-control" type="text" [(ngModel)]="editarHard.primercirculo" ></p>
+                  <div class="container d-flex justify-content-center align-items-center flex-column">
+                    <p  class="col-2 row-1 aling-self-center justify-self-center text-center">HTML  <input class="form-control" type="text" [(ngModel)]="editarHard.primercirculo" ></p>
+                    <p  class="col-2 row-1 text-center">Css<input class="form-control" type="text" [(ngModel)]=" editarHard.segundocirculo" ></p> 
+                    <p class="col-2 row-1  text-center">JavaScript<input  class="form-control" type="text" [(ngModel)]=" editarHard.tercercirculo" ></p> 
+                    <p  class="col-2 row-1  text-center">Angular  <input  class="form-control" type="text" [(ngModel)]=" editarHard.cuartocirculo" ></p> 
+                    <p class="col-2 row-1  text-center">Boostrap  <input  class="form-control" type="text" [(ngModel)]=" editarHard.quintocirculo" ></p> 
+                    <p  class="col-2 row-1 text-center">Sass<input  class="form-control" type="text" [(ngModel)]=" editarHard.sextocirculo" ></p> 
+
                   </div>
                 </div>
                 <div class="modal-footer">
