--- a/src/app/components/soft/soft.component.html
+++ b/src/app/components/soft/soft.component.html
@@ -1,17 +1,17 @@
 <div class="container-fluid">
   <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
-<h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-1">
+<h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-2 mt-1">
     Soft Skills  
-    <span *ngIf="botonEditHardSoft == true; else mostrar4"></span>
-    <ng-template #mostrar4 class="hover__boton">
+  
       <a
-      class="btn btn-outline-light hover__boton mb-5 ms-3"
+      *ngIf="SGguard.canActivate()"
+      class="btn btn-outline-light agregar__boton mb-3"
 role="button" title="Agregar Soft"
 data-bs-target="#SoftModalNuevo"
 data-bs-toggle="modal"
 ><i class="fa-solid fa-square-plus"></i
 ></a>
-</ng-template>
+
 </h3>
 
 <div *ngFor="let listas of miPortfolios">
@@ -21,6 +21,18 @@ data-bs-toggle="modal"
  <!--    <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark"> -->
       <h4 class="h3-acercaDe text-center mt-3">
         {{ miPortfolios.softTitulo}}
+      
+        <a
+        class="btn btn-outline-light hover__boton mb-3"
+        role="button"
+        data-bs-target="#SoftModal"
+        data-bs-toggle="modal"
+        *ngIf="SGguard.canActivate()"
+        (click)="editar(identificadors.value, miPortfolios.softTitulo, miPortfolios.softDescripcion, miPortfolios.icono)" title="Editar Tarjeta"
+        ><i class="fa-solid fa-pencil"></i
+        ></a>
+      
+      
       </h4>
 
         <div class="icons">
@@ -34,21 +46,12 @@ data-bs-toggle="modal"
       </p>
     </div>
 
-<span *ngIf="botonEditHardSoft == true; else mostrar4"></span>
-<ng-template #mostrar4 class="hover__boton">
-<div class="text-center">
-<a
-class="btn btn-outline-light hover__boton mb-3"
-role="button"
-data-bs-target="#SoftModal"
-data-bs-toggle="modal"
-(click)="editar(identificadors.value, miPortfolios.softTitulo, miPortfolios.softDescripcion, miPortfolios.icono)" title="Editar Tarjeta"
-><i class="fa-solid fa-pencil"></i
-></a>
+    
 
 
-</div>
-</ng-template>
+
+
+
 <!-- </article>
 
 
