--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
     <app-header></app-header>
     <app-navegacion></app-navegacion>
-    
+    <router-outlet></router-outlet>
     <app-footer></app-footer> 
