--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,43 +1,33 @@
-
     <footer class="bg-dark text-center text-white mt-3">
-        <!-- Grid container -->
         <div class="container p-4 pb-0">
-          <!-- Section: Social media -->
           <section class="mb-4">
-           
-            <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="#!" role="button"
-              ><i class="fab fa-twitter"></i
-            ></a>
-      
-      
+        
             <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="#!" role="button"
+            <!-- <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="#!" role="button"
               ><i class="fab fa-instagram"></i
-            ></a>
+            ></a> -->
       
             <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="#!" role="button"
+            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/" role="button" target="_blank"
               ><i class="fab fa-linkedin-in"></i
             ></a>
       
             <!-- Github -->
-
-              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="#!" role="button"
-                ><i class="fab fa-github  "></i
+              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://github.com/Claudio-Olivera" role="button"
+                ><i class="fab fa-github" target="_blank"></i
               ></a>
 
-    
+            <!-- Whatsapp -->
+              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://wa.me/5492984788433" target="_blank" role="button"
+              ><i class="fab fa-whatsapp"></i></a>
+              
           </section>
-          <!-- Section: Social media -->
         </div>
-        <!-- Grid container -->
-      
-        <!-- Copyright -->
+
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2022 Copyright
+          General Roca, provincia de Rio Negro, Argentina, 2022
           <p class="text-white">Sitio realizado por:<br/> Claudio Olivera González</p>
         </div>
-        <!-- Copyright -->
+      
       </footer>
 
