--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,6 +1,6 @@
 <!--========Inicio Hard Skills====== -->
 <!-- <div class="container-fluid"> -->
-  <div class="container-fluid"  > 
+  <div class="container"  > 
     <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark pb-3"  >
       <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mt-1 mb-2">Hard Skills
       
