--- a/src/app/components/soft/soft.component.html
+++ b/src/app/components/soft/soft.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
 <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-2 mt-1">
     Soft Skills  
