--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,14 +8,10 @@
             ></a> -->
       
             <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/" role="button" target="_blank"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
+            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/" role="button" target="_blank"><i class="fab fa-linkedin-in"></i></a>
       
             <!-- Github -->
-              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://github.com/Claudio-Olivera" role="button"
-                ><i class="fab fa-github" target="_blank"></i
-              ></a>
+              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://github.com/Claudio-Olivera/" role="button" target="_blank"><i class="fab fa-github"></i></a>
 
             <!-- Whatsapp -->
               <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://wa.me/5492984788433" target="_blank" role="button"
